<resources>
    <string name="app_name">小额贷款王</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header_title_yijiandaikuan">贷款大全</string>
    <string name="header_title_xinyongka">信用卡</string>
    <string name="header_title_daikuan">工具箱</string>
    <string name="double_click_back">再按一次即可退出。</string>
    <string name="d_haodai">好贷网贷款</string>
    <string name="d_rong360">融360贷款</string>
    <string name="d_paipai">拍拍贷</string>
    <string name="d_pingan">平安惠普</string>
    <string name="d_shanyin">闪银信用贷</string>
    <string name="d_mashang">马上消费金融</string>
    <string name="d_shoujidai">手机贷</string>
    <string name="d_yirendai">宜人贷</string>
    <string name="lli_edu">可贷额度 :</string>
    <string name="lli_drate">参考日利率 :</string>
</resources>
